--- a/index.html
+++ b/index.html
@@ -22,13 +22,38 @@ box-shadow:0 4px 8px rgba(0,0,0,.1);
 overflow:hidden
 }
 
-.slides{height:220px}
-.slides img{width:100%;height:100%;object-fit:cover}
+/* ===== SLIDER ===== */
+.slides{
+height:220px;
+position:relative;
+overflow:hidden
+}
+.slides img{
+width:100%;height:100%;
+object-fit:cover
+}
+
+.arrow{
+position:absolute;
+top:50%;
+transform:translateY(-50%);
+background:rgba(0,0,0,.6);
+color:#fff;
+border:none;
+width:32px;height:32px;
+border-radius:50%;
+cursor:pointer;
+font-size:18px
+}
+.arrow.left{left:8px}
+.arrow.right{right:8px}
 
 .thumbs{display:flex;gap:6px;padding:8px}
 .thumbs img{
-width:55px;height:45px;object-fit:cover;
-border-radius:6px;border:2px solid transparent;
+width:55px;height:45px;
+object-fit:cover;
+border-radius:6px;
+border:2px solid transparent;
 cursor:pointer
 }
 .thumbs img.active{border-color:#111}
@@ -98,19 +123,19 @@ margin-top:6px
     <h3 id="pname"></h3>
 
     <label>Full Name</label>
-    <input id="name" placeholder="Enter full name">
+    <input id="name">
 
     <label>Mobile Number</label>
-    <input id="phone" placeholder="10 digit mobile">
+    <input id="phone">
 
     <label>House / Street</label>
-    <textarea id="street" placeholder="House no, street, area"></textarea>
+    <textarea id="street"></textarea>
 
     <label>City</label>
-    <input id="city" placeholder="City">
+    <input id="city">
 
     <label>Pincode</label>
-    <input id="pin" placeholder="6 digit pincode">
+    <input id="pin">
 
     <label>Size</label>
     <select id="size">
@@ -141,41 +166,81 @@ const products=[
 ];
 
 const box=document.getElementById("products");
+let slideIndex=Array(products.length).fill(0);
 
 products.forEach((p,i)=>{
 box.innerHTML+=`
 <div class="card">
-<div class="slides"><img src="${p.imgs[0]}" id="m${i}"></div>
-<div class="thumbs">
-${p.imgs.map((img,j)=>`
-<img src="${img}" class="${j==0?'active':''}"
-onclick="chg(${i},'${img}',this)">`).join("")}
-</div>
-<div class="meta">
-<b>${p.name}</b>
-<div class="price"><span class="old">₹999</span> ₹349</div>
-<div class="free">Free Delivery</div>
-<a class="btn" onclick="openForm('${p.name}')">Buy Now</a>
-</div>
+  <div class="slides">
+    <button class="arrow left" onclick="prev(${i})">‹</button>
+    <img src="${p.imgs[0]}" id="m${i}">
+    <button class="arrow right" onclick="next(${i})">›</button>
+  </div>
+
+  <div class="thumbs">
+    ${p.imgs.map((img,j)=>`
+      <img src="${img}" class="${j==0?'active':''}"
+      onclick="setSlide(${i},${j})">
+    `).join("")}
+  </div>
+
+  <div class="meta">
+    <b>${p.name}</b>
+    <div class="price"><span class="old">₹999</span> ₹349</div>
+    <div class="free">Free Delivery</div>
+    <a class="btn" onclick="openForm('${p.name}')">Buy Now</a>
+  </div>
 </div>`;
 });
 
-function chg(i,src,e){
-document.getElementById("m"+i).src=src;
-e.parentElement.querySelectorAll("img").forEach(x=>x.classList.remove("active"));
-e.classList.add("active");
+/* SLIDER FUNCTIONS */
+function update(i){
+document.getElementById("m"+i).src=products[i].imgs[slideIndex[i]];
+document.querySelectorAll(".thumbs")[i]
+.querySelectorAll("img")
+.forEach((t,j)=>t.classList.toggle("active",j===slideIndex[i]));
 }
 
+function next(i){
+slideIndex[i]=(slideIndex[i]+1)%products[i].imgs.length;
+update(i);
+}
+function prev(i){
+slideIndex[i]=(slideIndex[i]-1+products[i].imgs.length)%products[i].imgs.length;
+update(i);
+}
+function setSlide(i,j){
+slideIndex[i]=j;
+update(i);
+}
+
+/* AUTO SLIDE */
+products.forEach((p,i)=>{
+setInterval(()=>next(i),3000);
+});
+
+/* MOBILE SWIPE */
+document.addEventListener("DOMContentLoaded",()=>{
+document.querySelectorAll(".slides").forEach((s,i)=>{
+let x=0;
+s.addEventListener("touchstart",e=>x=e.touches[0].clientX);
+s.addEventListener("touchend",e=>{
+let y=e.changedTouches[0].clientX;
+if(x-y>40) next(i);
+if(y-x>40) prev(i);
+});
+});
+});
+
+/* FORM */
 function openForm(p){
 currentProduct=p;
 document.getElementById("pname").innerText=p;
 document.getElementById("modal").style.display="flex";
 }
-
 function closeForm(){
 document.getElementById("modal").style.display="none";
 }
-
 function submitOrder(){
 let name=nameVal("name");
 let phone=nameVal("phone");
@@ -186,10 +251,10 @@ let size=document.getElementById("size").value;
 let qty=document.getElementById("qty").value;
 
 if(!/^[A-Za-z ]+$/.test(name)) return alert("Enter valid name");
-if(!/^[0-9]{10}$/.test(phone)) return alert("Enter valid mobile number");
-if(street.length<5) return alert("Enter proper address");
+if(!/^[0-9]{10}$/.test(phone)) return alert("Enter valid mobile");
+if(street.length<5) return alert("Enter address");
 if(city.length<2) return alert("Enter city");
-if(!/^[0-9]{6}$/.test(pin)) return alert("Enter valid pincode");
+if(!/^[0-9]{6}$/.test(pin)) return alert("Enter pincode");
 if(size==="") return alert("Select size");
 
 let msg=`NEW ORDER
@@ -204,7 +269,6 @@ Payment: COD`;
 window.open(`https://wa.me/${PHONE}?text=${encodeURIComponent(msg)}`,'_blank');
 closeForm();
 }
-
 function nameVal(id){
 return document.getElementById(id).value.trim();
 }
