--- a/index.html
+++ b/index.html
@@ -6,122 +6,221 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body{margin:0;font-family:Arial;background:#2b2b2b;color:#fff}
-header{background:#111;color:#fff;padding:15px;text-align:center}
-.banner{background:#111827;color:#fff;margin:10px;padding:10px;border-radius:8px;text-align:center}
-
-.grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:15px;padding:15px
+body{
+  margin:0;
+  font-family:Arial;
+  background:#2b2b2b;
+  color:#fff
 }
-
+header{
+  background:#111;
+  color:#fff;
+  padding:15px;
+  text-align:center
+}
+.banner{
+  background:#111827;
+  color:#fff;
+  margin:10px;
+  padding:10px;
+  border-radius:8px;
+  text-align:center
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:15px;
+  padding:15px
+}
 .card{
-background:#1f2933;border-radius:10px;
-box-shadow:0 4px 8px rgba(0,0,0,.4);
-overflow:hidden
+  background:#1f2933;
+  border-radius:10px;
+  box-shadow:0 4px 8px rgba(0,0,0,.4);
+  overflow:hidden
 }
 
 /* SLIDER */
-.slides{height:220px;position:relative;overflow:hidden;background:#fff}
-.slides img{width:100%;height:100%;object-fit:contain}
-
+.slides{
+  height:220px;
+  position:relative;
+  overflow:hidden;
+  background:#fff
+}
+.slides img{
+  width:100%;
+  height:100%;
+  object-fit:contain
+}
 .arrow{
-position:absolute;top:50%;transform:translateY(-50%);
-background:rgba(0,0,0,.6);color:#fff;border:none;
-width:32px;height:32px;border-radius:50%;cursor:pointer
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  background:rgba(0,0,0,.6);
+  color:#fff;
+  border:none;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  cursor:pointer;
+  font-size:18px
 }
 .arrow.left{left:8px}
 .arrow.right{right:8px}
 
-.thumbs{display:flex;gap:6px;padding:8px;justify-content:center}
-.thumbs img{
-width:55px;height:45px;object-fit:contain;
-border-radius:6px;border:2px solid transparent;cursor:pointer
+.thumbs{
+  display:flex;
+  gap:6px;
+  padding:8px;
+  justify-content:center
 }
-.thumbs img.active{border-color:#22c55e}
+.thumbs img{
+  width:55px;
+  height:45px;
+  object-fit:contain;
+  border-radius:6px;
+  border:2px solid transparent;
+  cursor:pointer;
+  background:#fff
+}
+.thumbs img.active{
+  border-color:#22c55e
+}
 
-.meta{text-align:center;padding:10px}
-.price{font-weight:bold;font-size:18px}
-.old{text-decoration:line-through;color:#aaa;margin-right:6px}
-.off{color:#22c55e;font-size:14px}
-.save{font-size:13px;color:#facc15}
-
+.meta{
+  text-align:center;
+  padding:10px
+}
+.price{
+  font-weight:bold;
+  font-size:18px
+}
+.old{
+  text-decoration:line-through;
+  color:#aaa;
+  margin-right:6px
+}
+.off{
+  color:#22c55e;
+  font-size:14px
+}
+.save{
+  font-size:13px;
+  color:#facc15
+}
+.free{
+  font-size:13px;
+  color:#34d399;
+  margin-top:4px
+}
 .btn{
-background:#22c55e;color:#000;
-padding:12px;border-radius:8px;
-display:block;margin-top:8px;
-text-decoration:none;font-weight:bold
+  background:#22c55e;
+  color:#000;
+  padding:12px;
+  border-radius:8px;
+  display:block;
+  margin-top:8px;
+  text-decoration:none;
+  font-weight:bold
 }
 
 /* MODAL */
 .modal-bg{
-position:fixed;inset:0;background:rgba(0,0,0,.7);
-display:none;align-items:flex-end;z-index:99
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.7);
+  display:none;
+  align-items:flex-end;
+  z-index:99
 }
 .modal{
-background:#1f2933;width:100%;max-height:90vh;
-border-radius:18px 18px 0 0;padding:18px;overflow-y:auto;color:#fff
+  background:#1f2933;
+  width:100%;
+  max-height:90vh;
+  border-radius:18px 18px 0 0;
+  padding:18px;
+  overflow-y:auto;
+  color:#fff
 }
-
-label{font-size:13px;font-weight:bold}
+label{
+  font-size:13px;
+  font-weight:bold
+}
 input,select,textarea{
-width:100%;padding:10px;border-radius:8px;
-border:1px solid #555;margin-bottom:8px;
-background:#111;color:#fff
+  width:100%;
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #555;
+  margin-bottom:8px;
+  background:#111;
+  color:#fff
 }
-textarea{resize:none;height:60px}
-.cancel{background:#6b7280;color:#fff}
+textarea{
+  resize:none;
+  height:60px
+}
+.cancel{
+  background:#6b7280;
+  color:#fff
+}
+.delivery{
+  font-size:13px;
+  color:#60a5fa;
+  margin-bottom:8px
+}
 </style>
 </head>
 
 <body>
 
 <header><h2>Grey8 Footwears</h2></header>
-<div class="banner">🔥 75% OFF • Cash on Delivery Available</div>
+<div class="banner">🔥 75% OFF • FREE DELIVERY • Cash on Delivery Available</div>
 
 <div class="grid" id="products"></div>
 
 <!-- ORDER FORM -->
 <div class="modal-bg" id="modal">
-<div class="modal">
-<h3 id="pname"></h3>
-<p>Price: <b>₹249</b> <span class="old">₹999</span></p>
-<p class="save">You Save ₹750 (75% OFF)</p>
+  <div class="modal">
+    <h3 id="pname"></h3>
 
-<label>Full Name</label>
-<input id="name">
+    <p>Price: <b>₹249</b> <span class="old">M.R.P ₹999</span></p>
+    <p class="save">You Save ₹750 (75% OFF)</p>
+    <p class="free">🚚 FREE DELIVERY</p>
+    <p class="delivery">⏱ Delivery within 7 Days</p>
 
-<label>Mobile Number</label>
-<input id="phone">
+    <label>Full Name</label>
+    <input id="name">
 
-<label>House / Street</label>
-<textarea id="street"></textarea>
+    <label>Mobile Number</label>
+    <input id="phone">
 
-<label>City</label>
-<input id="city">
+    <label>House / Street</label>
+    <textarea id="street"></textarea>
 
-<label>Pincode</label>
-<input id="pin">
+    <label>City</label>
+    <input id="city">
 
-<label>Size</label>
-<select id="size">
-<option value="">Select size</option>
-<option>6</option><option>7</option>
-<option>8</option><option>9</option><option>10</option>
-</select>
+    <label>Pincode</label>
+    <input id="pin">
 
-<label>Quantity</label>
-<input id="qty" type="number" min="1" value="1">
+    <label>Size</label>
+    <select id="size">
+      <option value="">Select size</option>
+      <option>6</option><option>7</option>
+      <option>8</option><option>9</option><option>10</option>
+    </select>
 
-<a class="btn" onclick="submitOrder()">Place Order ₹249</a>
-<a class="btn cancel" onclick="closeForm()">Cancel</a>
-</div>
+    <label>Quantity</label>
+    <input id="qty" type="number" min="1" value="1">
+
+    <a class="btn" onclick="submitOrder()">Place Order ₹249</a>
+    <a class="btn cancel" onclick="closeForm()">Cancel</a>
+  </div>
 </div>
 
 <script>
 const PHONE="917879266424";
 let currentProduct="";
+
 const products=[
 {name:"Everyday Comfort Sneakers",imgs:["image/1.jpg","image/2.jpg","image/3.jpg"]},
 {name:"Rockstar Denim Loafers",imgs:["image/11.jpg","image/22.jpg","image/33.jpg"]},
@@ -137,44 +236,54 @@ let slideIndex=Array(products.length).fill(0);
 products.forEach((p,i)=>{
 box.innerHTML+=`
 <div class="card">
-<div class="slides">
-<button class="arrow left" onclick="prev(${i})">‹</button>
-<img src="${p.imgs[0]}" id="m${i}">
-<button class="arrow right" onclick="next(${i})">›</button>
-</div>
+  <div class="slides">
+    <button class="arrow left" onclick="prev(${i})">‹</button>
+    <img src="${p.imgs[0]}" id="m${i}">
+    <button class="arrow right" onclick="next(${i})">›</button>
+  </div>
 
-<div class="thumbs">
-${p.imgs.map((img,j)=>`<img src="${img}" class="${j==0?'active':''}" onclick="setSlide(${i},${j})">`).join("")}
-</div>
+  <div class="thumbs">
+    ${p.imgs.map((img,j)=>`
+      <img src="${img}" class="${j==0?'active':''}"
+      onclick="setSlide(${i},${j})">
+    `).join("")}
+  </div>
 
-<div class="meta">
-<b>${p.name}</b>
-<div class="price"><span class="old">₹999</span> ₹249</div>
-<div class="off">75% OFF</div>
-<div class="save">You Save ₹750</div>
-<a class="btn" onclick="openForm('${p.name}')">Buy Now</a>
-</div>
+  <div class="meta">
+    <b>${p.name}</b>
+    <div class="price"><span class="old">M.R.P ₹999</span> ₹249</div>
+    <div class="off">75% OFF</div>
+    <div class="save">You Save ₹750</div>
+    <div class="free">🚚 FREE DELIVERY</div>
+    <a class="btn" onclick="openForm('${p.name}')">Buy Now</a>
+  </div>
 </div>`;
 });
 
+/* SLIDER */
 function update(i){
 document.getElementById("m"+i).src=products[i].imgs[slideIndex[i]];
-document.querySelectorAll(".thumbs")[i].querySelectorAll("img")
+document.querySelectorAll(".thumbs")[i]
+.querySelectorAll("img")
 .forEach((t,j)=>t.classList.toggle("active",j===slideIndex[i]));
 }
 function next(i){slideIndex[i]=(slideIndex[i]+1)%products[i].imgs.length;update(i)}
 function prev(i){slideIndex[i]=(slideIndex[i]-1+products[i].imgs.length)%products[i].imgs.length;update(i)}
 function setSlide(i,j){slideIndex[i]=j;update(i)}
 
-products.forEach((p,i)=>{setInterval(()=>{prev(i)},4000)});
+products.forEach((p,i)=>{
+setInterval(()=>{prev(i)},4000);
+});
 
+/* FORM */
 function openForm(p){
 currentProduct=p;
 document.getElementById("pname").innerText=p;
 document.getElementById("modal").style.display="flex";
 }
-function closeForm(){document.getElementById("modal").style.display="none"}
-
+function closeForm(){
+document.getElementById("modal").style.display="none";
+}
 function submitOrder(){
 let name=document.getElementById("name").value.trim();
 let phone=document.getElementById("phone").value.trim();
@@ -186,8 +295,10 @@ let qty=document.getElementById("qty").value;
 
 let msg=`NEW ORDER
 Product: ${currentProduct}
-Price: ₹249
-You Save: ₹750 (75% OFF)
+Price: ₹249 (M.R.P ₹999)
+Discount: 75% OFF
+Delivery: FREE DELIVERY
+Delivery Time: Within 7 Days
 Name: ${name}
 Mobile: ${phone}
 Address: ${street}, ${city} - ${pin}
