--- a/index.html
+++ b/index.html
@@ -17,22 +17,15 @@ gap:12px;padding:12px
 
 .card{
 background:#fff;border-radius:12px;overflow:hidden;
-box-shadow:0 2px 8px rgba(0,0,0,.08)
+box-shadow:0 2px 8px rgba(0,0,0,.08);
+cursor:pointer
 }
 
-.slider{height:180px;position:relative;overflow:hidden}
-.slider img{
-width:100%;height:180px;object-fit:cover;
-position:absolute;opacity:0;transition:.5s
+.card img{
+width:100%;
+height:180px;
+object-fit:cover
 }
-.slider img.active{opacity:1}
-
-.arrow{
-position:absolute;top:50%;transform:translateY(-50%);
-background:rgba(0,0,0,.6);color:#fff;
-border:none;width:30px;height:30px;border-radius:50%
-}
-.left{left:8px} .right{right:8px}
 
 .badge{
 position:absolute;top:8px;right:8px;
@@ -46,17 +39,11 @@ padding:4px 8px;border-radius:12px
 .price{font-size:14px}
 .old{color:#777;text-decoration:line-through;font-size:12px}
 
-.btn{
-margin-top:6px;width:100%;padding:8px;
-background:#000;color:#fff;border:none;border-radius:8px
-}
-
 /* DETAIL PAGE */
 .page{
 position:fixed;inset:0;background:#fff;
 overflow:auto;display:none;z-index:99
 }
-.page img{width:100%}
 
 .close{
 position:fixed;top:10px;right:10px;
@@ -64,16 +51,17 @@ background:#000;color:#fff;border:none;
 padding:6px 10px;border-radius:6px
 }
 
-.review{border-bottom:1px solid #eee;padding:8px 0}
-.name{font-weight:bold}
-.verified{color:green;font-size:12px}
-.date{font-size:11px;color:#777}
+.btn{
+margin-top:10px;width:100%;padding:10px;
+background:#000;color:#fff;border:none;border-radius:8px
+}
 </style>
 </head>
 
 <body>
 
 <header>ShopOne.in</header>
+
 <div class="grid" id="list"></div>
 
 <div class="page" id="detail">
@@ -86,28 +74,75 @@ const products=[
 {
 name:"Urban Sneakers",
 off:"65%",mrp:999,price:249,
-imgs:["images/urban-1111.jpg","images/urban-2222.jpg","images/urban-3333.jpg"]
+img:"images/1111.jpg"
 },
 {
 name:"Fancy Shoes",
 off:"60%",mrp:1099,price:259,
-imgs:["images/fancy-11.jpg","images/fancy-22.jpg","images/fancy-33.jpg"]
+img:"images/11.jpg"
 },
 {
 name:"Classic Wear",
 off:"62%",mrp:1049,price:249,
-imgs:["images/classic-111.jpg","images/classic-222.jpg","images/classic-333.jpg"]
+img:"images/111.jpg"
 },
 {
 name:"Sporty Look",
 off:"64%",mrp:1249,price:262,
-imgs:["images/sporty-11111.jpg","images/sporty-22222.jpg","images/sporty-33333.jpg"]
+img:"images/11111.jpg"
 },
 {
 name:"Denim Shoes",
 off:"61%",mrp:990,price:241,
-imgs:["images/denim-111111.jpg","images/denim-222222.jpg","images/denim-333333.jpg"]
+img:"images/111111.jpg"
 },
+{
+name:"Daily Comfort",
+off:"63%",mrp:1150,price:255,
+img:"images/1.jpg"
+}
+];
+
+const list=document.getElementById("list");
+
+products.forEach((p,i)=>{
+list.innerHTML+=`
+<div class="card" onclick="openPage(${i})">
+<div style="position:relative">
+<img src="${p.img}">
+<span class="badge">${p.off} OFF</span>
+</div>
+<div class="info">
+<div class="title">${p.name}</div>
+<div class="stars">★★★★☆</div>
+<div class="price">₹${p.price} <span class="old">M.R.P ₹${p.mrp}</span></div>
+</div>
+</div>`;
+});
+
+function openPage(i){
+let p=products[i];
+detail.style.display="block";
+detailContent.innerHTML=`
+<img src="${p.img}" style="width:100%">
+<div style="padding:15px">
+<h3>${p.name}</h3>
+<div class="stars">★★★★☆</div>
+<p><b>₹${p.price}</b> <span class="old">M.R.P ₹${p.mrp}</span></p>
+<p>✔ Free Delivery<br>✔ Delivery in 7 Working Days</p>
+<button class="btn" onclick="order('${p.name}')">Order on WhatsApp</button>
+</div>`;
+}
+
+function closePage(){detail.style.display="none"}
+
+function order(name){
+window.open("https://wa.me/917879266424?text=Order%20for%20"+name);
+}
+</script>
+
+</body>
+</html>},
 {
 name:"Daily Comfort",
 off:"63%",mrp:1150,price:255,
