--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>ShopOne.in</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 <style>
 body{margin:0;font-family:Arial;background:#f2f2f2}
 header{background:#fff;padding:12px;text-align:center;font-size:20px;font-weight:bold}
@@ -21,7 +24,7 @@ box-shadow:0 2px 8px rgba(0,0,0,.08);
 cursor:pointer
 }
 
-/* ✅ 1:1 SQUARE IMAGE */
+/* ✅ 1:1 IMAGE */
 .card img{
 width:100%;
 aspect-ratio:1/1;
@@ -55,6 +58,25 @@ padding:6px 10px;border-radius:6px
 margin-top:10px;width:100%;padding:10px;
 background:#000;color:#fff;border:none;border-radius:8px
 }
+
+/* ✅ FOOTER */
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:20px 10px;
+margin-top:20px
+}
+footer .icons i{
+font-size:22px;
+margin:0 10px;
+color:#fff
+}
+footer p{
+margin-top:12px;
+font-size:13px;
+color:#ccc
+}
 </style>
 </head>
 
@@ -68,6 +90,18 @@ background:#000;color:#fff;border:none;border-radius:8px
 <button class="close" onclick="closePage()">X</button>
 <div id="detailContent"></div>
 </div>
+
+<!-- ✅ FOOTER START -->
+<footer>
+<div class="icons">
+<a href="https://wa.me/917879266424"><i class="fab fa-whatsapp"></i></a>
+<a href="mailto:support@shopone.in"><i class="fa fa-envelope"></i></a>
+<a href="#"><i class="fab fa-facebook"></i></a>
+<a href="#"><i class="fab fa-instagram"></i></a>
+</div>
+<p>© 2026 ShopOne.in</p>
+</footer>
+<!-- ✅ FOOTER END -->
 
 <script>
 const products=[
