--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>ShopOne.in</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
@@ -24,7 +23,6 @@ box-shadow:0 2px 8px rgba(0,0,0,.08);
 cursor:pointer
 }
 
-/* ✅ 1:1 IMAGE */
 .card img{
 width:100%;
 aspect-ratio:1/1;
@@ -39,7 +37,19 @@ padding:4px 8px;border-radius:12px
 
 .info{padding:10px}
 .title{font-size:14px;font-weight:bold}
-.stars{color:#f59e0b;font-size:13px}
+
+.stars{
+color:#f59e0b;
+font-size:13px;
+display:flex;
+align-items:center;
+gap:6px
+}
+.stars span{
+color:#555;
+font-size:12px
+}
+
 .price{font-size:14px}
 .old{color:#777;text-decoration:line-through;font-size:12px}
 
@@ -59,24 +69,12 @@ margin-top:10px;width:100%;padding:10px;
 background:#000;color:#fff;border:none;border-radius:8px
 }
 
-/* ✅ FOOTER */
 footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:20px 10px;
-margin-top:20px
+background:#000;color:#fff;text-align:center;
+padding:20px 10px;margin-top:20px
 }
-footer .icons i{
-font-size:22px;
-margin:0 10px;
-color:#fff
-}
-footer p{
-margin-top:12px;
-font-size:13px;
-color:#ccc
-}
+footer i{font-size:22px;margin:0 10px;color:#fff}
+footer p{margin-top:12px;font-size:13px;color:#ccc}
 </style>
 </head>
 
@@ -91,38 +89,40 @@ color:#ccc
 <div id="detailContent"></div>
 </div>
 
-<!-- ✅ FOOTER START -->
 <footer>
-<div class="icons">
 <a href="https://wa.me/917879266424"><i class="fab fa-whatsapp"></i></a>
 <a href="mailto:support@shopone.in"><i class="fa fa-envelope"></i></a>
 <a href="#"><i class="fab fa-facebook"></i></a>
 <a href="#"><i class="fab fa-instagram"></i></a>
-</div>
 <p>© 2026 ShopOne.in</p>
 </footer>
-<!-- ✅ FOOTER END -->
 
 <script>
+function getStars(){
+const ratings=["★★★☆☆","★★★★☆","★★★★☆","★★★★☆"];
+return ratings[Math.floor(Math.random()*ratings.length)];
+}
+
 const products=[
-{name:"Premium Boss Edition",price:249,mrp:999,off:"65%",img:"images/Premium Boss Edition.jpg"},
-{name:"Royal Polo Classic (Tan)",price:259,mrp:1099,off:"60%",img:"images/Royal Polo Classic (Tan).jpg"},
-{name:"Royal Polo Classic (Black)",price:249,mrp:1049,off:"62%",img:"images/Royal Polo Classic (Black).jpg"},
-{name:"Starry Denim Sneaker",price:262,mrp:1249,off:"64%",img:"images/Starry Denim Sneaker.jpg"},
-{name:"Jumpman Street-Vibe",price:241,mrp:990,off:"61%",img:"images/Jumpman Street-Vibe.jpg"},
-{name:"Classic Fashion Navy",price:255,mrp:1150,off:"63%",img:"images/Classic Fashion Navy.jpg"},
-{name:"Red-Strip Comfort Slip-on",price:269,mrp:1299,off:"66%",img:"images/Red-Strip Comfort Slip-on.jpg"},
-{name:"Urban Black Swoosh",price:245,mrp:999,off:"65%",img:"images/Urban Black Swoosh.jpg"},
-{name:"Triple-Strap Easy Wear",price:259,mrp:1199,off:"64%",img:"images/Triple-Strap Easy Wear.jpg"},
-{name:"Elite Knitted Loafer",price:239,mrp:899,off:"63%",img:"images/Elite Knitted Loafer.jpg"},
-{name:"Rugged Denim Walker",price:279,mrp:1399,off:"68%",img:"images/Rugged Denim Walker.jpg"},
-{name:"Blue Wave Slip-on",price:249,mrp:1099,off:"65%",img:"images/Blue Wave Slip-on.jpg"},
-{name:"Active Sports Blue",price:269,mrp:1299,off:"67%",img:"images/Active Sports Blue.jpg"}
+{name:"Premium Boss Edition",price:249,mrp:999,off:"65%",rating:333,img:"images/Premium Boss Edition.jpg"},
+{name:"Royal Polo Classic (Tan)",price:259,mrp:1099,off:"60%",rating:412,img:"images/Royal Polo Classic (Tan).jpg"},
+{name:"Royal Polo Classic (Black)",price:249,mrp:1049,off:"62%",rating:487,img:"images/Royal Polo Classic (Black).jpg"},
+{name:"Starry Denim Sneaker",price:262,mrp:1249,off:"64%",rating:356,img:"images/Starry Denim Sneaker.jpg"},
+{name:"Jumpman Street-Vibe",price:241,mrp:990,off:"61%",rating:621,img:"images/Jumpman Street-Vibe.jpg"},
+{name:"Classic Fashion Navy",price:255,mrp:1150,off:"63%",rating:398,img:"images/Classic Fashion Navy.jpg"},
+{name:"Red-Strip Comfort Slip-on",price:269,mrp:1299,off:"66%",rating:544,img:"images/Red-Strip Comfort Slip-on.jpg"},
+{name:"Urban Black Swoosh",price:245,mrp:999,off:"65%",rating:888,img:"images/Urban Black Swoosh.jpg"},
+{name:"Triple-Strap Easy Wear",price:259,mrp:1199,off:"64%",rating:467,img:"images/Triple-Strap Easy Wear.jpg"},
+{name:"Elite Knitted Loafer",price:239,mrp:899,off:"63%",rating:359,img:"images/Elite Knitted Loafer.jpg"},
+{name:"Rugged Denim Walker",price:279,mrp:1399,off:"68%",rating:333,img:"images/Rugged Denim Walker.jpg"},
+{name:"Blue Wave Slip-on",price:249,mrp:1099,off:"65%",rating:521,img:"images/Blue Wave Slip-on.jpg"},
+{name:"Active Sports Blue",price:269,mrp:1299,off:"67%",rating:704,img:"images/Active Sports Blue.jpg"}
 ];
 
 const list=document.getElementById("list");
 
 products.forEach((p,i)=>{
+const stars=getStars();
 list.innerHTML+=`
 <div class="card" onclick="openPage(${i})">
 <div style="position:relative">
@@ -131,7 +131,7 @@ list.innerHTML+=`
 </div>
 <div class="info">
 <div class="title">${p.name}</div>
-<div class="stars">★★★★☆</div>
+<div class="stars">${stars} <span>| ${p.rating}</span></div>
 <div class="price">₹${p.price} <span class="old">M.R.P ₹${p.mrp}</span></div>
 </div>
 </div>`;
@@ -139,22 +139,20 @@ list.innerHTML+=`
 
 function openPage(i){
 let p=products[i];
+const stars=getStars();
 detail.style.display="block";
 detailContent.innerHTML=`
 <img src="${p.img}" style="width:100%;aspect-ratio:1/1;object-fit:cover">
 <div style="padding:15px">
 <h3>${p.name}</h3>
-<div class="stars">★★★★☆</div>
+<div class="stars">${stars} <span>| ${p.rating}</span></div>
 <p><b>₹${p.price}</b> <span class="old">M.R.P ₹${p.mrp}</span></p>
 <p>✔ Free Delivery<br>✔ Delivery in 7 Working Days</p>
 <button class="btn" onclick="order('${p.name}')">Order on WhatsApp</button>
 </div>`;
 }
 
-function closePage(){
-detail.style.display="none"
-}
-
+function closePage(){detail.style.display="none"}
 function order(name){
 window.open("https://wa.me/917879266424?text=Order%20for%20"+name);
 }
