--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@ footer p{margin-top:12px;font-size:13px;color:#ccc}
 
 <script>
 function getStars(){
-const ratings=["★★★☆☆","★★★★☆","★★★★☆","★★★★☆"];
+const ratings=[
+'<i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i><i class="fa-regular fa-star"></i>',
+'<i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>',
+'<i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>'
+];
 return ratings[Math.floor(Math.random()*ratings.length)];
 }
 
