--- a/index.html
+++ b/index.html
@@ -148,9 +148,11 @@ detailContent.innerHTML=`
 </div>
 
 <div class="rating-bars">
-<div class="row">Very Good<div class="bar"><div class="fill" style="width:${p.ratingValue*20}%"></div></div></div>
-<div class="row">Good<div class="bar"><div class="fill" style="width:${p.ratingValue*15}%"></div></div></div>
-<div class="row">Ok-Ok<div class="bar"><div class="fill" style="width:${p.ratingValue*10}%;background:#facc15"></div></div></div>
+<div class="row">5 ★<div class="bar"><div class="fill" style="width:${p.ratingValue*20}%"></div></div></div>
+<div class="row">4 ★<div class="bar"><div class="fill" style="width:${p.ratingValue*18}%"></div></div></div>
+<div class="row">3 ★<div class="bar"><div class="fill" style="width:${p.ratingValue*14}%;background:#facc15"></div></div></div>
+<div class="row">2 ★<div class="bar"><div class="fill" style="width:${p.ratingValue*8}%;background:#fb923c"></div></div></div>
+<div class="row">1 ★<div class="bar"><div class="fill" style="width:${p.ratingValue*4}%;background:#ef4444"></div></div></div>
 </div>
 </div>
 
