Update footer text and delivery information

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ footer p{margin-top:12px;font-size:13px;color:#ccc}
 <a href="mailto:support@shopone.in"><i class="fa fa-envelope"></i></a>
 <a href="#"><i class="fab fa-facebook"></i></a>
 <a href="#"><i class="fab fa-instagram"></i></a>
-<p>© 2026 ShopOne.in</p>
+<p>2026 ShopOnein </p>
 </footer>
 
 <script>
@@ -169,7 +169,7 @@ ${s} ★
 </div>
 </div>
 
-<p>✔ Free Delivery<br>✔ Delivery in 7 Working Days</p>
+<p>✔ Free & Fast Delivery<br>✔ Cash oncash onDelivery</p>
 <button class="btn" onclick="order('${p.name}')">Order on WhatsApp</button>
 </div>`;
 }
