Fix title and footer text in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>ShopOne.in</title>
+<title>ShopOne in</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -76,7 +76,7 @@ footer p{margin-top:12px;font-size:13px;color:#ccc}
 <a href="mailto:support@shopone.in"><i class="fa fa-envelope"></i></a>
 <a href="#"><i class="fab fa-facebook"></i></a>
 <a href="#"><i class="fab fa-instagram"></i></a>
-<p>2026 ShopOnein </p>
+<p>2026 ShopOne in </p>
 </footer>
 
 <script>
@@ -169,7 +169,7 @@ ${s} ★
 </div>
 </div>
 
-<p>✔ Free & Fast Delivery<br>✔ Cash oncash onDelivery</p>
+<p>🚚 Free & Fast Delivery<br>🔸 Cash On Delivery</p>
 <button class="btn" onclick="order('${p.name}')">Order on WhatsApp</button>
 </div>`;
 }
