Update header and delivery message in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ footer p{margin-top:12px;font-size:13px;color:#ccc}
 
 <body>
 
-<header>ShopOne.in</header>
+<header>ShopOne in</header>
 
 <div class="grid" id="list"></div>
 
@@ -169,7 +169,7 @@ ${s} ★
 </div>
 </div>
 
-<p>🚚 Free & Fast Delivery<br>🔸 Cash On Delivery</p>
+<p>🚚 Fast & Free Delivery<br>🔸 Cash On Delivery</p>
 <button class="btn" onclick="order('${p.name}')">Order on WhatsApp</button>
 </div>`;
 }
